[tool.poetry]
name = "dismat"
version = "0.1.0"
description = ""
authors = ["Мущина Анастасия Сергеевна <anastasemusa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.0"
python-math = "^0.0.1"
shapely = "^2.0.4"
networkx = "^3.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
